# portfolio

./: .gitignore  404.html  CNAME  IDEA.md  Makefile  README.md  TODO.md  index.html  mkdocs.yml  ngwords.csv  pyproject.toml  sitemap.xml  ublacklist.txt
.github/: README.md
.github/workflows/: github_pages.yml  test.yml
background/: index.html
backgrounds/: index.html
common/: Makefile  mkdocs_base.yml
common/experimental/: generate.sh  openapi.json  sample.py
css/: custom.css
docs/: background.md  backgrounds.md  index.md  tech_stack.md
done/: 20260208114627_.txt  20260208114808_.txt  20260208114829_.txt  20260208115934_a.txt  20260208115943_b.txt  20260208120146_c.txt
print_page/: index.html
search/: search_index.json
tech_stack/: index.html
