[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkautodoc = "^0.2.0"
mkdocs-material = "^8.5.8"
pymdown-extensions = "^9.7"
mkdocs-print-site-plugin = "^2.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
